# capi

./: .gitignore  Dockerfile  Makefile  README.md  base.env  compose.yaml  entrypoint.sh  pyproject.toml  standard_config.yaml
.github/workflows/: super-linter.yml  test.yml
challenge_api/: main.py
competition_api/: background.py  config.py  cp_registry.py  cp_workspace.py  flatfile.py  logging.py  main.py  migrate.sh  prestart.py  tasks.py
competition_api/alembic/: env.py
competition_api/alembic/versions/: 20240711T1808-add_admin_perm-bfbe083e14ae.py
competition_api/audit/: __init__.py  audit.py  models.py  types.py
competition_api/db/: __init__.py  auth.py  common.py  gp.py  session.py  vds.py
competition_api/endpoints/: __init__.py
competition_api/endpoints/audit/: _router.py
competition_api/endpoints/gp/: _router.py  gp.py
competition_api/endpoints/lib/: auth.py
competition_api/endpoints/metadata/: _router.py
competition_api/endpoints/vds/: _router.py  vds.py
competition_api/models/: __init__.py  competition.py  gp.py  metadata.py  vds.py
competition_api/tasks/: __init__.py  gp.py  lib.py  pool.py  results.py  vds.py  worker.py
demo/: run.sh
e2e/: run.sh
tests/: conftest.py  test_cpworkspace.py  test_tasks.py
tests/api/: test_audit.py  test_gp.py  test_metadata.py  test_vds.py
tests/db/: test_auth.py
tests/lib/: auditor.py
