[tool.poetry]
name = "challenge-api"
version = "0.1.0"
description = ""
authors = ["Thing 012 <thing-012@aicyberchallenge.com>"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
isort = ">=5.13.2"
black = ">=24.4.2"
pylint = ">=3.1.0"
bandit = ">=1.7.8"
safety = ">=3.2.0"
mypy = ">=1.10.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
